# PlanetEngine

./: .gitignore  .gitmodules  BUILD  BUILD.bazel  CMakeLists.txt  CPPLINT.cfg  Cargo.toml  LICENSE  PlanetEngine.sln  PlanetEngine.vcxproj  PlanetEngine.vcxproj.filters  README.md  WORKSPACE  conanfile.py  conanfile.txt  gtest.BUILD
.github/workflows/: build.yml  msbuild.yml
AssetsTest/: plane.fbx
Lib/: BUILD.bazel
Shader/: CloudsShader.hlsl  FallbackShader.hlsl  PixelShader.hlsl  SkySphere.hlsl  SunDisc.hlsl  TexturedShader.hlsl  VertexShader.hlsl  WireframeShader.hlsl  Worley.hlsl
Src/D3DRenderer/Lib/: CPPLINT.cfg
Src/D3DRenderer/Private/: BaseRootSignature.cpp  BaseRootSignature.h  D3DAssert.h  D3DCommandQueue.cpp  D3DCommandQueue.h  D3DConstants.h  D3DFence.cpp  D3DFence.h  D3DPipelineState.cpp  D3DPipelineState.h  D3DRenderSystem.cpp  D3DRenderer.cpp  D3DRenderer.h  D3DRootSignature.cpp  D3DRootSignature.h  D3DShader.cpp  D3DShader.h  D3DTexture.cpp  D3DWindowEvents.cpp  D3DWindowEvents.h  GPUResourceManager.cpp  GPUResourceManager.h  RenderState.h
Src/D3DRenderer/Private/Descriptor/: D3DDescriptorTable.h  SRVHeap.cpp  SRVHeap.h
Src/D3DRenderer/Private/ImGUI/: CPPLINT.cfg  ImGUIRenderer.cpp  ImGUIRenderer.h  imgui_impl_dx12.cpp  imgui_impl_dx12.h  planet_imgui.h
Src/D3DRenderer/Private/Material/: D3DMaterial.cpp  D3DMaterial.h  MaterialResource.h
Src/D3DRenderer/Private/Mesh/: D3DMesh.h  MeshResource.h
Src/D3DRenderer/Private/Shader/: D3DComputeShader.cpp  D3DPixelShader.cpp  D3DPixelShader.h  D3DShader.cpp  D3DShader.h  D3DShaderLoader.cpp  D3DShaderLoader.h  D3DVertexShader.cpp  D3DVertexShader.h
Src/D3DRenderer/Private/Texture/: D3DTexture.cpp  D3DTexture.h  D3DTextureLoader.cpp  D3DTextureLoader.h  TextureResource.h
Src/D3DRenderer/Public/: D3DRenderSystem.h
Src/Planet-Editor/Private/: CPPLINT.cfg  EditorWindow.h  FileAssetManager.cpp  FileAssetManager.h  GameCanvas.cpp  GameCanvas.h  Main.cpp  MainFrame.h  PlanetEditor.cpp  PlanetEditor.h
Src/Planet-Editor/Private/AssetViewer/: AssetViewer.cpp  AssetViewer.h
Src/Planet-Editor/Private/File/: DirectoryListener.h  FileAssetManager.h
Src/Planet-Engine/Private/: PlanetEngine.cpp  PlanetLogging.cpp  PlanetLogging.h  UpdateEvents.cpp
Src/Planet-Engine/Private/Compute/: ComputeShader.cpp
Src/Planet-Engine/Private/Container/: String.cpp  String.h
Src/Planet-Engine/Private/D3D11/: D3DRenderer.cpp  D3DRenderer.h  D3DShader.cpp  D3DTexture.cpp  D3DTexture.h
Src/Planet-Engine/Private/Editor/: FlyCam.cpp  FlyCam.h
Src/Planet-Engine/Private/Entity/: Component.cpp  Component.h  Entity.cpp  Entity.h
Src/Planet-Engine/Private/Input/: ImGuiInput.cpp  ImGuiInput.h  InputManager.cpp  InputManager.h
Src/Planet-Engine/Private/Jobs/: LazyJobSystem.cpp  ThreadPoolJobSystem.cpp  ThreadPoolJobSystem.h
Src/Planet-Engine/Private/Material/: Material.cpp  Material.h
Src/Planet-Engine/Private/Math/: Elipsoid.cpp  Elipsoid.h  Quaternion.cpp  Transform.cpp  Transform.h  Vector.h
Src/Planet-Engine/Private/Mesh/: FBXImporter.cpp  FBXImporter.h  GPUResourceManager.cpp  GPUResourceManager.h  Mesh.cpp  Mesh.h  MeshComponent.cpp  MeshComponent.h  OBJImporter.cpp  OBJImporter.h  Primitives.cpp  Primitives.h
Src/Planet-Engine/Private/Platform/: PlanetWindows.cpp  Platform.h  Window.cpp  Window.h  planet_imgui.cpp  planet_imgui.h
Src/Planet-Engine/Private/Renderer/: RenderManager.cpp  RenderManager.h  RenderState.h  Renderer.h  UIRenderer.cpp  UIRenderer.h
Src/Planet-Engine/Private/Texture/: ComputeTexture2D.cpp  Texture.cpp  Texture2D.cpp  Texture2D.h  TextureFactory.cpp  TextureFactory.h  TextureWriter.cpp  TextureWriter.h
Src/Planet-Engine/Private/World/: CloudBox.cpp  CloudBox.h  Scene.cpp  Scene.h  SkyDome.cpp  SkyDome.h  SolarUtils.cpp  TimeOfDay.cpp  TimeOfDay.h  Worley.cpp  Worley.h
Src/Planet-Engine/Public/: PlanetEngine.h  PlanetLogging.h  UpdateEvents.h
Src/Planet-Engine/Public/Compute/: ComputeShader.h  NumThreads.h
Src/Planet-Engine/Public/Container/: LinkedList.h  String.h
Src/Planet-Engine/Public/Entity/: Entity.h
Src/Planet-Engine/Public/Jobs/: JobRunner.h  JobSystem.h
Src/Planet-Engine/Public/Material/: Material.h
Src/Planet-Engine/Public/Math/: Math.h  Quaternion.h  Transform.h  Vector.h  Vector2D.h  iVec2D.h
Src/Planet-Engine/Public/Mesh/: Mesh.h  MeshComponent.h
Src/Planet-Engine/Public/Platform/: PlanetWindows.h  Window.h
Src/Planet-Engine/Public/Render/: RenderSystem.h  Renderer.h  ResourceManager.h  WorldBufferData.h
Src/Planet-Engine/Public/Shader/: PixelShader.h  VertexShader.h
Src/Planet-Engine/Public/Texture/: ComputeTexture2D.h  Texture2D.h
Src/Planet-Game/: Main.cpp  WinMain.cpp
Src/Planet-Game/Private/: Main.cpp
Src/Planet/Private/: PlanetEngine.cpp  PlanetEngine.h  PlanetLogging.h  WinMain.cpp
Test/: BUILD  CMakeLists.txt
Test/Planet/Container/: LinkedListTest.cpp
Test/Planet/Math/: VectorTest.cpp
Test/Planet/World/: SolarUtilsTest.cpp
docs/: graphics.md  materials.md  textures.md
shaders/: Common.hlsl  FallbackShader.hlsl  PixelShader.hlsl  TreeShader.hlsl
shaders/ps/: FallbackShader.hlsl  PSCommon.hlsl  PixelShader.hlsl  SkySphere.hlsl  TexturedShader.hlsl  TreeShader.hlsl  WireframeShader.hlsl
shaders/vs/: VSCommon.hlsl  VertexShader.hlsl
src/: engine.rs  input.rs  instance.rs  main.rs  material.rs  mesh.rs  timeofday.rs
src/d3d-renderer/private/: D3DCommandQueue.cpp  D3DConstants.h  D3DRenderSystem.cpp  D3DRenderer.cpp  D3DRenderer.h  D3DRootSignature.cpp  D3DWindowEvents.cpp  GPUResourceManager.cpp  GPUResourceManager.h
src/d3d-renderer/public/: D3DAssert.h  D3DRenderSystem.h
src/editor/private/: MainFrame.cpp
src/engine/private/: PlanetEngine.cpp
src/engine/public/: PlanetEngine.h
src/engine/test/: PlanetTest.h
src/graphics/: d3dgraphics.rs  mod.rs
src/graphics/d3dgraphics/: d3dcommandqueue.rs  d3dmesh.rs  d3dpipelinestate.rs  d3dresources.rs  d3drootsignature.rs  d3dshader.rs  mod.rs
src/renderer/: d3drenderer.rs  mod.rs
src/windowing/: mod.rs
src/windowing/winapi/: mod.rs
(+157 files in other folders)
