load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test", "cc_binary")

cc_binary(
    name = "planet-engine",
    deps = ["//Lib:imgui"],
    includes = [
        "Src/",
        "Lib/",
    ],
    srcs = glob([
            "Src/**/*.cpp"
    ]),
    defines = ["PLATFORM_WIN"],
    linkopts = ["-SUBSYSTEM:WINDOWS"]
)