[package]
name = "engine"
version = "0.0.0"
authors = ["Nick Pearson"]
edition = "2021"

[[bin]]
name = "engine"
path = "src/main.rs"

[dependencies]
arrayvec = "0.7.0"
glam = "0.24"

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
]

[dev-dependencies]
assert_approx_eq = "1.1.0"