[package]
name = "engine"
version = "0.0.0"
authors = ["Nick Pearson"]
edition = "2021"

[[bin]]
name = "engine"
path = "src/main.rs"

[dependencies]
arrayvec = "0.7.0"
glam = "0.24"
chrono = "0.4"
log = "0.4"
simple_logger = "4.2.0"

[dependencies.windows]
version = "0.48"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse"
]

[dev-dependencies]
assert_approx_eq = "1.1.0"