load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "imgui",
    srcs = [
            "imgui/imgui.cpp",
            "imgui/imgui_demo.cpp",
            "imgui/imgui_draw.cpp",
            "imgui/imgui_widgets.cpp",
            "imgui/examples/imgui_impl_dx11.cpp",
            "imgui/imgui_internal.h",
            "imgui/imstb_rectpack.h",
            "imgui/imstb_textedit.h",
            "imgui/imstb_truetype.h",
    ],
    hdrs = [
            "imgui/imgui.h",
            "imgui/imconfig.h",
            "imgui/examples/imgui_impl_dx11.h",
    ],
    includes = [
        "imgui/",
        "imgui/examples/"
    ],
    linkstatic=True
)